--- a/server/apppyme/pom.xml
+++ b/server/apppyme/pom.xml
@@ -40,6 +40,10 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
