--- a/server/apppyme/pom.xml
+++ b/server/apppyme/pom.xml
@@ -74,6 +74,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.20.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
