--- a/server/apppyme/pom.xml
+++ b/server/apppyme/pom.xml
@@ -15,6 +15,8 @@
 	<description>proyecto para poner en practica los conocimientos en JAVAcom.sv.apppyme</description>
 	<properties>
 		<java.version>17</java.version>
+		<!-- Enviroment Default-->
+		<env>dev</env>
 	</properties>
 	<dependencies>
 		<dependency>
